syntax = "proto3";
option java_multiple_files = false;
option java_package = "com.security";
option java_outer_classname = "HelloSecurityProto";

message SecurityRequest{
  string onInstructs = 1;
  string offInstructs = 2;
}

message SecurityResponse{
  string warnings = 1;
  string operations = 2;
  string dangerRemove = 3;
  string operationsTwo = 4;
}

message SecurityHealthCheckRequest {
  string serviceName = 1;
  string serviceVersion = 2;
  int64 timestamp = 3;
}

message SecurityHealthCheckResponse {
  int32 status = 1;
  string message = 2;
}

service HelloSecurity{
  rpc securityService(stream SecurityRequest)  returns ( stream SecurityResponse);
  // Server-side streaming RPC for health check
  rpc HealthCheck(SecurityHealthCheckRequest) returns (stream SecurityHealthCheckResponse);
}